# dynamic-bayesian-nets

./: LICENSE  README.md  dynamic-bayesian-nets.cabal
app/: Main.hs
app/Examples/: SantanderProductRecommendation.hs
app/Parser/: Attoparsec.hs
src/: Lib.hs
