name:                dynamic-bayesian-nets
version:             0.1.0.0
synopsis:            
description:         Please see README.md
homepage:            https://github.com/ocramz/dynamic-bayesian-nets
license:             GPL-3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca marco gmail
copyright:           2016 Marco Zocca
category:            Statistics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , vector
                     , attoparsec
                     , cassava
                     , split
                     , time
                     , fgl

executable dynamic-bayesian-nets
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Examples.SantanderProductRecommendation
  build-depends:       base
                     , attoparsec
                     , bytestring
                     , vector
                     , time
                     , split
                     , dynamic-bayesian-nets

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
  build-depends:       base
                     , dynamic-bayesian-nets
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/dynamic-bayesian-nets
